--- a/index.html
+++ b/index.html
@@ -12,16 +12,14 @@
         <ul id="meals-list">
            <p>Cargando...</p>
         </ul>
-        <form>
+        <form id="order">
             <input type="hidden" id="meals-id">
             <input type="submit" id="submit" disabled>
         </form>
     </div>
     <div id="orders">
         <ul id="orders-list">
-            <li>Pizza - Ernesto</li>
-            <li>Hamburguesa - Vanessa</li>
-            <li>Pizza - Jorge</li>
+            <p>Cargando...</p>
         </ul>
     </div>
 </body>
